objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air Ship Merchandise</fullName>
                </value>
                <value>
                    <fullName>Bi-Coastal Transfer</fullName>
                </value>
                <value>
                    <fullName>Ship Directly to Market (circumvent DC)</fullName>
                </value>
                <value>
                    <fullName>Sourced from Alternate Vendor</fullName>
                </value>
                <value>
                    <fullName>Sourced from Future Dated Order</fullName>
                </value>
                <value>
                    <fullName>Sourced from Gallery</fullName>
                </value>
                <value>
                    <fullName>Vendor Expedited Production</fullName>
                </value>
                <value>
                    <fullName>NC Exchange</fullName>
                </value>
                <value>
                    <fullName>Cancel w/Re-selection</fullName>
                </value>
                <value>
                    <fullName>Cancel w/o Re-selection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Notes__c</fullName>
        <label>Activity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Product_Name__c</fullName>
        <formula>CW_SKU_ID__r.Actual_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_SKU_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CW SKU ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Line Item</label>
        <referenceTo>Case_Line_Items__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <formula>CW_SKU_ID__r.Class_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <formula>CW_SKU_ID__r.Collection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>CW_SKU_ID__r.Color__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compared_to__c</fullName>
        <label>Compared To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Another Product</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>DQ</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Part of Set</fullName>
                </value>
                <value>
                    <fullName>Sourcebook</fullName>
                </value>
                <value>
                    <fullName>Swatch</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Issue__c</fullName>
        <label>Contract Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Complexity</fullName>
                </value>
                <value>
                    <fullName>Billing Error</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Delay COI</fullName>
                </value>
                <value>
                    <fullName>Delay COM/COL Order</fullName>
                </value>
                <value>
                    <fullName>Delay Core Backorder</fullName>
                </value>
                <value>
                    <fullName>Delay Custom Order</fullName>
                </value>
                <value>
                    <fullName>Delay Drop Ship</fullName>
                </value>
                <value>
                    <fullName>Delay SPO</fullName>
                </value>
                <value>
                    <fullName>Delivery Damage</fullName>
                </value>
                <value>
                    <fullName>Delivery Documents</fullName>
                </value>
                <value>
                    <fullName>Delivery Error</fullName>
                </value>
                <value>
                    <fullName>Delivery Provider Challange</fullName>
                </value>
                <value>
                    <fullName>Delivery Return Challenge</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Product Parts</fullName>
                </value>
                <value>
                    <fullName>Product_Condition</fullName>
                </value>
                <value>
                    <fullName>Return Provider</fullName>
                </value>
                <value>
                    <fullName>Service Contract Team Member</fullName>
                </value>
                <value>
                    <fullName>Service CSC Team Member</fullName>
                </value>
                <value>
                    <fullName>Service Gallery Team Member</fullName>
                </value>
                <value>
                    <fullName>Service HDL Team Member</fullName>
                </value>
                <value>
                    <fullName>Site Damage</fullName>
                </value>
                <value>
                    <fullName>Wrong Items</fullName>
                </value>
                <value>
                    <fullName>Wrong Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>CW_SKU_ID__r.Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Code__c</fullName>
        <formula>CW_SKU_ID__r.Dept_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Quality</fullName>
                </value>
                <value>
                    <fullName>2nd Quality</fullName>
                </value>
                <value>
                    <fullName>3rd Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <formula>Case__r.Expected_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hazardous_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Sharing_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Sharing Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Attitude</fullName>
                </value>
                <value>
                    <fullName>Balance Due</fullName>
                </value>
                <value>
                    <fullName>Carton Damage</fullName>
                </value>
                <value>
                    <fullName>Color/ Finish</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Contamination</fullName>
                </value>
                <value>
                    <fullName>Credit Due</fullName>
                </value>
                <value>
                    <fullName>CSC Service Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Preference (Product As Expected)</fullName>
                </value>
                <value>
                    <fullName>Customer Specific Requirements</fullName>
                </value>
                <value>
                    <fullName>Customer Unavailable</fullName>
                </value>
                <value>
                    <fullName>Customs</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Delivery Service Issue</fullName>
                </value>
                <value>
                    <fullName>Drayage</fullName>
                </value>
                <value>
                    <fullName>Fabric</fullName>
                </value>
                <value>
                    <fullName>Fabrics/ Leather/ Fur</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Frame</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Gallery Service Issue</fullName>
                </value>
                <value>
                    <fullName>Grouped/ Not</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Incorrect</fullName>
                </value>
                <value>
                    <fullName>Invoice Missing</fullName>
                </value>
                <value>
                    <fullName>Lack of Knowledge</fullName>
                </value>
                <value>
                    <fullName>Lack of Response</fullName>
                </value>
                <value>
                    <fullName>Late/ Cx V Promise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Delivery Provider</fullName>
                </value>
                <value>
                    <fullName>Assembled Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Assembly - Components Misaligned/ Non-Functioning Hardware</fullName>
                </value>
                <value>
                    <fullName>Billing Issue</fullName>
                </value>
                <value>
                    <fullName>Blemishes</fullName>
                </value>
                <value>
                    <fullName>Bowing/ Warping</fullName>
                </value>
                <value>
                    <fullName>Broken Part</fullName>
                </value>
                <value>
                    <fullName>Bubbling/ Lifting</fullName>
                </value>
                <value>
                    <fullName>Bugs/ Vermin</fullName>
                </value>
                <value>
                    <fullName>Burning Smell</fullName>
                </value>
                <value>
                    <fullName>Cannot Contact HDL</fullName>
                </value>
                <value>
                    <fullName>Color Clash</fullName>
                </value>
                <value>
                    <fullName>Color Slightly off</fullName>
                </value>
                <value>
                    <fullName>Cracks/ Splits</fullName>
                </value>
                <value>
                    <fullName>Creases</fullName>
                </value>
                <value>
                    <fullName>Crushed Corner</fullName>
                </value>
                <value>
                    <fullName>CSC Service Issue</fullName>
                </value>
                <value>
                    <fullName>Customer Preference - Product As Expected</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Delivery Service Issue</fullName>
                </value>
                <value>
                    <fullName>Dings/ Dents/ Gouges</fullName>
                </value>
                <value>
                    <fullName>Dirt</fullName>
                </value>
                <value>
                    <fullName>Dirtied Home</fullName>
                </value>
                <value>
                    <fullName>Distressing</fullName>
                </value>
                <value>
                    <fullName>Does Not Fit</fullName>
                </value>
                <value>
                    <fullName>Does Not Turn On</fullName>
                </value>
                <value>
                    <fullName>Doors Do Not Open or Close Properly</fullName>
                </value>
                <value>
                    <fullName>Drawers Do Not Open or Close Properly</fullName>
                </value>
                <value>
                    <fullName>Duplicate Order</fullName>
                </value>
                <value>
                    <fullName>Element Does Not Align</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occurred_When__c</fullName>
        <label>Occurred When</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>During Delivery</fullName>
                </value>
                <value>
                    <fullName>In DC</fullName>
                </value>
                <value>
                    <fullName>In HDL</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Customer Assembly</fullName>
                </value>
                <value>
                    <fullName>After Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <formula>Order__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Issue Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Notes__c</fullName>
        <label>Problem Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B/O Delays</fullName>
                </value>
                <value>
                    <fullName>SPO Delays</fullName>
                </value>
                <value>
                    <fullName>Item Sold Out</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Missing Items</fullName>
                </value>
                <value>
                    <fullName>Grouping/Ungrouping Issues</fullName>
                </value>
                <value>
                    <fullName>Quality Concern</fullName>
                </value>
                <value>
                    <fullName>System Hold Error</fullName>
                </value>
                <value>
                    <fullName>Premature Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivery Issues</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>CW_SKU_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>How many components/ products are affected by this issue?</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <formula>Case_Line_Item__r.Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ship_To__c.Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Order__c</valueField>
            </filterItems>
            <infoMessage>Ship To 1 must reference the same order that is referenced in the Order field.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_City__c</fullName>
        <formula>Order__r.Sold_to_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold to City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_State__c</fullName>
        <formula>Order__r.Sold_to_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold to State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved - Action Taken</fullName>
                </value>
                <value>
                    <fullName>Resolved - No Action Taken</fullName>
                </value>
                <value>
                    <fullName>Closed - No Issue Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <formula>CW_SKU_ID__r.Sub_Department_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Issue__c</fullName>
        <label>Sub Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Backorder</fullName>
                </value>
                <value>
                    <fullName>Billing confusing</fullName>
                </value>
                <value>
                    <fullName>Carrier Mislabeled</fullName>
                </value>
                <value>
                    <fullName>Customer provided wrong address</fullName>
                </value>
                <value>
                    <fullName>Feel the Frame</fullName>
                </value>
                <value>
                    <fullName>Missed Window Early</fullName>
                </value>
                <value>
                    <fullName>Missed Window Late</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Not Distressed Enough</fullName>
                </value>
                <value>
                    <fullName>Overcharged</fullName>
                </value>
                <value>
                    <fullName>Production Delay</fullName>
                </value>
                <value>
                    <fullName>RH Mislabeled</fullName>
                </value>
                <value>
                    <fullName>Stale Backorder</fullName>
                </value>
                <value>
                    <fullName>Sticking</fullName>
                </value>
                <value>
                    <fullName>Too Big</fullName>
                </value>
                <value>
                    <fullName>Too Deep</fullName>
                </value>
                <value>
                    <fullName>Too Distressed</fullName>
                </value>
                <value>
                    <fullName>Too Hard</fullName>
                </value>
                <value>
                    <fullName>Too Hard to Open</fullName>
                </value>
                <value>
                    <fullName>Too Rough</fullName>
                </value>
                <value>
                    <fullName>Too Shallow</fullName>
                </value>
                <value>
                    <fullName>Too Small</fullName>
                </value>
                <value>
                    <fullName>Won&apos;t Stay Closed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_in_Home__c</fullName>
        <formula>DATEVALUE(CreatedDate) - Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Home (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <formula>CW_SKU_ID__r.Vendor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <formula>CW_SKU_ID__r.Vendor_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Style_Number__c</fullName>
        <formula>CW_SKU_ID__r.Vendor_Style_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Style Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Description__c</fullName>
        <description>This field is a direct copy of a field from another object. This is required for DRS based reports.</description>
        <formula>CW_SKU_ID__r.Web_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Product_Type_is_the_SKU__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bath Furniture</fullName>
                </value>
                <value>
                    <fullName>Bath Water Supply</fullName>
                </value>
                <value>
                    <fullName>Bed/ Crib/ Toddler Bed /Bunk Bed</fullName>
                </value>
                <value>
                    <fullName>Casegoods/ Shelving</fullName>
                </value>
                <value>
                    <fullName>Cushion/ Pillows</fullName>
                </value>
                <value>
                    <fullName>Décor - Wall Decor/ Frames/ Lit Decor/ Holiday</fullName>
                </value>
                <value>
                    <fullName>Fire Pits/ Fire Bowls/ Heaters</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Kitchenware/ Tableware</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
                <value>
                    <fullName>Mirrors</fullName>
                </value>
                <value>
                    <fullName>Plumbing Fixtures/ Bath Water Supply</fullName>
                </value>
                <value>
                    <fullName>Rugs</fullName>
                </value>
                <value>
                    <fullName>Seating</fullName>
                </value>
                <value>
                    <fullName>Sinks/ Basins</fullName>
                </value>
                <value>
                    <fullName>Tables/ Desks</fullName>
                </value>
                <value>
                    <fullName>Textiles</fullName>
                </value>
                <value>
                    <fullName>Umbrellas/ Shade</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_is_the_Problem__c</fullName>
        <label>Problem Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>What_Product_Type_is_the_SKU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arm(s)</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Backing</fullName>
                </value>
                <value>
                    <fullName>Base/ Pedestal</fullName>
                </value>
                <value>
                    <fullName>Binding</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Bowl</fullName>
                </value>
                <value>
                    <fullName>Bulb Holder</fullName>
                </value>
                <value>
                    <fullName>Bulbs</fullName>
                </value>
                <value>
                    <fullName>Burner</fullName>
                </value>
                <value>
                    <fullName>Cabinet Doors</fullName>
                </value>
                <value>
                    <fullName>Cabinet Drawers</fullName>
                </value>
                <value>
                    <fullName>Canopy</fullName>
                </value>
                <value>
                    <fullName>Casters/ Wheels</fullName>
                </value>
                <value>
                    <fullName>Chain</fullName>
                </value>
                <value>
                    <fullName>Clasp</fullName>
                </value>
                <value>
                    <fullName>Cord</fullName>
                </value>
                <value>
                    <fullName>Crystals</fullName>
                </value>
                <value>
                    <fullName>Cushion</fullName>
                </value>
                <value>
                    <fullName>Door(s)</fullName>
                </value>
                <value>
                    <fullName>Drain</fullName>
                </value>
                <value>
                    <fullName>Drawer(s)</fullName>
                </value>
                <value>
                    <fullName>Drawer Pulls</fullName>
                </value>
                <value>
                    <fullName>Electrical - Bulb Holder</fullName>
                </value>
                <value>
                    <fullName>Electrical - Cords</fullName>
                </value>
                <value>
                    <fullName>Electrical - Plug</fullName>
                </value>
                <value>
                    <fullName>Electrical - Switch</fullName>
                </value>
                <value>
                    <fullName>Embellishments/ Attachments</fullName>
                </value>
                <value>
                    <fullName>Faucet</fullName>
                </value>
                <value>
                    <fullName>Fill/ Foam/ Batting/ Feathers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lighting_Issues1</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>What_Product_Type_is_the_SKU__c</field>
            <operation>equals</operation>
            <value>Lamp Shade,Lighting</value>
        </filters>
        <label>Lighting - Issues</label>
        <sharedTo>
            <group>CSC_Business_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Issues_Contract</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>Issue__c</columns>
        <columns>Other_Notes__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - No Issue Found</value>
        </filters>
        <label>My Open Issues - Contract</label>
        <sharedTo>
            <role>Administration</role>
            <role>HospitalityProductSupplyManager</role>
            <role>LargeIncrementalSalesRep</role>
            <role>LargeIncrlSalesLeader</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ISSUE-{0}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <recordTypes>
        <fullName>Billing_Issue_Contract</fullName>
        <active>true</active>
        <description>Issues with Billing Complexity or Errors</description>
        <label>Billing Issue - Contract</label>
    </recordTypes>
</CustomObject>